# atsamd-flash-algorithm

./: Cargo.toml  README.md  gen-yaml.sh  link.x  template.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
