[package]
authors = ["Nils Fitinghoff <nils.fitinghoff@volvocars.com>"]
edition = "2021"
readme = "README.md"
name = "atsamd-flash-algorithm"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.0"
rtt-target = { version = "0.3", features = ["cortex-m"] }

[dependencies.atsamd-hal]
git = "https://github.com/vccnfitingh/atsamd.git"
branch = "nvm"
features = ["same51n"]

[dependencies.flash-algorithm]
git = "https://github.com/probe-rs/flash-algorithm.git"
rev = "0d68027422914da8193effb5b1507598d97afb7d"
default-features = false
features = ["panic-handler"]

# this lets you use `cargo fix`!
[[bin]]
name = "atsamd-flash-algorithm"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
